# SearchAndCollect2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/: lklist.h
include/SearchAndCollect2/: collect.h  common.h  config.h  dfsfilescanner.h  error_codes.h  filescanner.h  hashing.h  pe.h
src/: collect.c  common.c  config.c  dfsfilescanner.c  error_codes.c  filescanner.c  hashing.c  lklist.c  main.c  pe.c
